--- a/_include/nvme/verify-nvme-services.adoc
+++ b/_include/nvme/verify-nvme-services.adoc
@@ -2,7 +2,10 @@
 
 . Verify that `nvmf-autoconnect.service` is enabled:
 +
-`systemctl status nvmf-autoconnect.service`
+[source,cli]
+----
+systemctl status nvmf-autoconnect.service
+----
 +
 .Show example output
 [%collapsible]
@@ -19,7 +22,10 @@ Jun 10 04:06:26 SR630-13-201.lab.eng.btc.netapp.in systemd[1]: Finished Connect 
 ====
 . Verify that `nvmefc-boot-connections.service` is enabled:
 +
-`systemctl status nvmefc-boot-connections.service`
+[source,cli]
+----
+systemctl status nvmefc-boot-connections.service
+----
 +
 .Show example output
 [%collapsible]
