ontapdoc-2984 output commands and examples plus minor SME feedback

--- a/_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc
+++ b/_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc
@@ -11,6 +11,8 @@ NOTE: These steps don't apply to Qlogic NVMe/FC hosts.
 cat /etc/modprobe.d/lpfc.conf 
 ----
 +
+You should see an output similar to the following example:
++
 ----
 options lpfc lpfc_sg_seg_cnt=256
 ----
