--- a/nvme_rhel_10.adoc
+++ b/nvme_rhel_10.adoc
@@ -51,7 +51,7 @@ For information on how to enable the HBA BIOS, see your vendor-specific document
 
 == Step 2: Validate software versions
 
-You can use the following procedure to validate the minimum supported RHEL 10 software versions.
+Use the following procedure to validate the minimum supported RHEL 10 software versions.
 
 .Steps
 
@@ -323,7 +323,7 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Step 5: Verify NVMe boot services 
 
-With RHEL 10, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. Once booting completes, you should verify that the services are enabled.
+With RHEL 10, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. After booting completes, verify that the services are enabled.
 
 include::_include/nvme/verify-nvme-services.adoc[]
 
@@ -438,7 +438,7 @@ eflags:  none
 sectype: none
 =====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data: 
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
 +
 [source,cli]
 ----
@@ -645,9 +645,9 @@ nvme netapp ontapdevices -o json
 
 Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10 host and an ONTAP controller.
 
-To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key, which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
+Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
-You can set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
+Set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
 
 [role="tabbed-block"]
 =====
@@ -748,7 +748,7 @@ DHHC- 1:03:7zf8I9gaRcDWH3tCH5vLGaoyjzPIvwNWusBfKdpJa+hia
 --
 When multiple NVMe subsystems are available on the ONTAP controller configuration, you can use the `/etc/nvme/config.json` file with the `nvme connect-all` command. 
 
-To generate the JSON file, you can use the `-o` option. See the NVMe connect-all manual pages for more syntax options.
+Use the `-o` option to generate the JSON file. See the NVMe connect-all manual pages for more syntax options.
 
 .Steps
 . Configure the JSON file.
@@ -793,8 +793,6 @@ To generate the JSON file, you can use the `-o` option. See the NVMe connect-all
 }]
 ----
 ==== 
-[NOTE]
-In the preceding example, `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`. 
 
 . Connect to the ONTAP controller using the config JSON file:
 +
@@ -860,7 +858,7 @@ mzEKUbcWu26I33b93bil2WR09XDho/ld3L45J+0FeCsStBEAfhYgkQU=:
 
 == Step 9: Review the known issues
 
-No known issues exist for the NVMe-oF host configuration on RHEL 10 with ONTAP release.
+There are no known issues.
 
 //ONTAPDOC-2561 25-Nov-2024
 //ONTAPDOC-2987 13-May-2025
