ontapdoc-2987 amended note from PR review

--- a/nvme_rhel_10.adoc
+++ b/nvme_rhel_10.adoc
@@ -753,6 +753,9 @@ Use the `-o` option to generate the JSON file. See the NVMe connect-all manual p
 .Steps
 . Configure the JSON file.
 +
+[NOTE]
+In the following example, `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`.
+
 .Show example
 [%collapsible]
 ====
