--- a/nvme_rhel_96.adoc
+++ b/nvme_rhel_96.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_96.html
+permalink: nvme-rhel-96.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.6 with ONTAP
 ---
