--- a/hu_citrix_84.adoc
+++ b/hu_citrix_84.adoc
@@ -41,8 +41,8 @@ There are no known issues for the FC host configuration for Citrix Xenserver 8.4
 
 == What's next?
 
-•	link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool].
-•	Learn about ASM mirroring.
+* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool].
+* Learn about ASM mirroring.
 Automatic Storage Management (ASM) mirroring might require changes to the Linux multipath settings to allow ASM to recognize a problem and switch over to an alternate failure group. Most ASM configurations on ONTAP use external redundancy, which means that data protection is provided by the external array and ASM doesn't mirror data. Some sites use ASM with normal redundancy to provide two-way mirroring, normally across different sites. See link:https://docs.netapp.com/us-en/ontap-apps-dbs/oracle/oracle-overview.html[Oracle databases on ONTAP] for further information.
 
 //ONTAPDOC-3030 29-May-2025
