--- a/hu_citrix_82.adoc
+++ b/hu_citrix_82.adoc
@@ -1,6 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_citrix_82.html
+redirect: hu_citrix_8x.html
 keywords: host utilities, citrix, Hypervisor, 8 series, netapp, ontap, san, boot
 summary: Describes how to use Citrix Hypervisor 8.2 with ONTAP
 ---
@@ -25,10 +26,6 @@ include::_include/hu/install-linux-host-utilities.adoc[]
 
 You can use multipathing with Citrix Hypervisor 8.2 to manage ONTAP LUNs.
 
-For Citrix Hypervisor 8.2  the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. Citrix Hypervisor 8.2 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
-
-You can use the `/sbin/mpathutil` status command to verify the settings for your ONTAP LUNs.
-
 include::_include/hu/citrix-8x-multipathing.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
@@ -41,8 +38,8 @@ There are no known issues.
 
 == What's next?
 
-* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool].
-* Learn about ASM mirroring.
-Automatic Storage Management (ASM) mirroring might require changes to the Linux multipath settings to allow ASM to recognize a problem and switch over to an alternate failure group. Most ASM configurations on ONTAP use external redundancy, which means that data protection is provided by the external array and ASM doesn't mirror data. Some sites use ASM with normal redundancy to provide two-way mirroring, normally across different sites. See link:https://docs.netapp.com/us-en/ontap-apps-dbs/oracle/oracle-overview.html[Oracle databases on ONTAP] for further information.
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[] 
 
 //ONTAPDOC-3030 29-May-2025
