--- a/hu_citrix_84.adoc
+++ b/hu_citrix_84.adoc
@@ -1,6 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_citrix_84.html
+redirect: hu_citrix_8x.html
 keywords: host utilities, citrix, XenServer, 8 series, netapp, ontap, san, boot
 summary: Describes how to use Citrix XenServer 8.4 with ONTAP
 ---
@@ -25,9 +26,6 @@ include::_include/hu/install-linux-host-utilities.adoc[]
 
 You can use multipathing with Citrix Xenserver 8.4 to manage ONTAP LUNs.
 
-For Citrix Xenserver 8.4  the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. Citrix Xenserver  8.4 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
-
-
 include::_include/hu/citrix-8x-multipathing.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
@@ -40,8 +38,8 @@ There are no known issues.
 
 == What's next?
 
-* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool].
-* Learn about ASM mirroring.
-Automatic Storage Management (ASM) mirroring might require changes to the Linux multipath settings to allow ASM to recognize a problem and switch over to an alternate failure group. Most ASM configurations on ONTAP use external redundancy, which means that data protection is provided by the external array and ASM doesn't mirror data. Some sites use ASM with normal redundancy to provide two-way mirroring, normally across different sites. See link:https://docs.netapp.com/us-en/ontap-apps-dbs/oracle/oracle-overview.html[Oracle databases on ONTAP] for further information.
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[] 
 
 //ONTAPDOC-3030 29-May-2025
